test_scripts/errors/fn_call_bad_kwarg.shm
fn foo(a, b) {
    print(a);
}

foo(13+1="foo");
